Отверстал первую страницу

--- a/src/components/_colors.scss
+++ b/src/components/_colors.scss
@@ -4,6 +4,7 @@ $c_black: #1E0606;
 $c_black--deep: #000000;
 $c_black--medium: #2C2C2C;
 $c_black--light: #2C3036;
+$c_black--panter: #070707;
 
 $c_blue: #70bbdc;
 $c_blue--light: #E1F0F7;
@@ -26,17 +27,20 @@ $c_grey: #C1C1C1;
 $c_grey--light: #E1E1E1;
 $c_grey--medium: #666666;
 $c_grey--dark: #434343;
-$c_grey--text: #818181;
+$c_grey--text: #828282;
 $c_grey--text-light: #EBEBEB;
 $c_grey--text-medium: #AAAAAA;
 $c_grey--text-dark: #A2A2A2;
 $c_grey--grid: #BCBCBE;
+$c_grey--wild-sand: #f6f6f6;
+$c_grey--mercury: #e5e5e5;
 
 $c_pink: #cf446f;
 $c_pink--light: #F3D0DB;
 
 $c_red: #EF5539;
 $c_red--pale: #FA684F;
+$c_red--fire: #FF0000;
 
 $c_purple: #8F75BC;
 $c_purple--light: #8972B6;
