--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,286 +1,144 @@
 // Подключение компонентов
 
-@import "main";
+@import "./header/header";
+@import "./avatar/avatar";
+@import "./about-me/about-me";
+@import "./skills/skills";
+@import "./portfolio/portfolio";
+@import "./footer/footer";
+@import "./profile/profile";
+@import "./modal/modal";
+@import "./mobile-menu/mobile-menu";
+@import "./button-scroll/button-scroll";
 
-/* Modal window */
+body { 
+  font-family: "Gilroy", Arial, sans-serif;
+}
 
-.modal-window {
-  max-width: 680px;
-  width: 100%;
-  min-height: 542px;
-  background: #E5EAF8;
-  padding: 42px 40px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+a { 
+  text-decoration: none; 
+  font-family: "Gilroy", Arial, sans-serif;
+}
 
-  @include media_interval($media_mobile, $media_tablet) {
-    max-width: 648px;
-    padding: 41px 55px;
+html { 
+  box-sizing: border-box; 
+}
+
+*, 
+*::before, 
+*::after { 
+  box-sizing: inherit; 
+}
+
+img { 
+  max-width: 100%; 
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  max-width: 1300px;
+  padding: 0 220px;
+  margin: 0 auto;
+
+  @include media_interval(0, $media_tablet) {
+    padding: 0 60px;
   }
 
   @include media_interval(0, $media_mobile) {
-    max-width: 335px;
-    height: 555px;
-    padding: 25px 25px;
-    overflow: hidden;
+    padding: 0 20px;
   }
 }
 
-.form__label {
-  font-family: "Roboto", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  color: #1E0606;
-  display: flex;
-  flex-direction: column;
+/* Main */
 
-  &-text {
-    margin-bottom: 7px;
-    display: block;
-    font-family: "Roboto", Arial, sans-serif;
+.hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  will-change: 1px !important;
+  overflow: hidden;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+}
+
+h1 {
+  font-family: "Gilroy", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 47px;
+  line-height: 56px;
+  color: $c_black;
+  margin-top: 40px;
+
+  @include media_interval($media_mobile, $media_tablet) {
+    font-size: 36px;
+    line-height: 44px;
+    margin-bottom: 10px;
+  }
+
+  @include media_interval(0, $media_mobile) {
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 10px;
+  }
+}
+
+h2 {
+  font-family: "Gilroy", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 34px;
+  line-height: 42px;
+  color: $c_black;
+  margin-top: 60px;
+}
+
+.button {
+  font-family: "Gilroy", Arial, sans-serif;
+  background-color: transparent;
+  padding: 0;
+  border: none;   
+  transition:$tr_duration $tr_easing;
+
+  @include media_interval(0, $media_mobile) {
     font-size: 14px;
-    line-height: 16px;
-
-    @include media_interval(0, $media_mobile) {
-      margin-bottom: 6px;
-    }
+    line-height: 19px;
+    padding: 8px 22px;
   }
 
-  &-input {
-    width: 100%;
-    height: 50px;
-    font-size: 18px;
-    line-height: 21px;  
-    padding: 14px 20px;
-    background: #FFFFFF;       
-    border: 1px solid rgba(0, 0, 0, 0.2); 
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    transition:$tr_duration $tr_easing;
-
-    @include media_interval($media_mobile, $media_tablet) {
-      font-size: 16px;
-      line-height: 19px;
-    }
-
-    @include media_interval(0, $media_mobile) {
-      font-size: 14px;
-      line-height: 16px;
-      margin-bottom: 20px;
-      height: 40px;
-      padding: 12px 15px;
-    }
-  
-    &:hover {
-      border: 2px solid rgba(0, 0, 0, 0.3); 
-    }
-
-    &:active {
-      border: 1px solid rgba(0, 0, 0, 0.2); 
-    }
-
-    &::-webkit-input-placeholder {
-      color: #1E0606;
-    } 
-  
-  }  
-
-  &-textarea {
-    width: 600px;
-    height: 150px;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-sizing: border-box;
-    padding: 14px 20px;
-    font-family: "Roboto", Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px;
-    transition:$tr_duration $tr_easing;
-
-    @include media_interval($media_mobile, $media_tablet) {
-      width: 536px;
-    }
-
-    @include media_interval(0, $media_mobile) {
-      width: 285px;
-      min-height: 150px;
-    }
-  
-    &:hover {
-      border: 2px solid rgba(0, 0, 0, 0.3); 
-    }
-
-    &:active {
-      border: 1px solid rgba(0, 0, 0, 0.2); 
-    }
-    
-  }
-
-}
-
-.form {
-
-  &__row {
-    display: flex;
-    justify-content: space-between;
-    width: 600px;
-
-    @include media_interval($media_mobile, $media_tablet) {
-      width: 536px;
-    }
-
-    @include media_interval(0, $media_mobile) {
-      display: block;
-    }
-  }
-  
-  &__cell-600 {
-    width: 600px;
-
-    @include media_interval($media_mobile, $media_tablet) {
-      width: 536px;
-    }
-
-    @include media_interval(0, $media_mobile) {
-      width: 285px;
-      height: 40px;
-      margin-bottom: 37px;
-    }
-  }
-  
-  &__cell-50 {
-    width: 290px;
-
-    @include media_interval($media_mobile, $media_tablet) {
-      width: 258px;
-    }
-
-    @include media_interval(0, $media_mobile) {
-      width: 285px;
-      height: 40px;
-      margin-bottom: 37px;
-    }
-
-  }
-
-}
-
-.consent {
-  margin: 20px 0 21px;
-  font-family: "Roboto", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  color: #1E0606; 
-  align-items: center;
-
-  @include media_interval(0, $media_mobile) {
-    margin-top: 24px;
-  }
-
-  &__input:focus ~ .clicking-button {
-    outline: auto;
-  }
-  
-}
-
-input:checked ~ .clicking-button::after{
-  opacity: 1;
-}
-
-.clicking-button {
-  padding-left: 33px;
-  display: flex;
-  align-items: center;
-  position: relative;
-  height: 17px;
-
-  @include media_interval($media_mobile, $media_tablet) {
-    padding-left: 34px;
-  }
-
-  @include media_interval(0, $media_mobile) {
-    padding-left: 28px;
+  &:focus {
+    outline-color: $c_beige--dark;
+    outline-style: solid;
+    outline-width: 2px;
   }
 
   &:hover {
-    text-decoration: underline;
-  }
-  
-  &::before{
-    position: absolute;
-    content: '';
-    top: -1px;
-    left: 0;
-    width: 19px;
-    height: 19px;
-    border: 2px solid #C29974;
-    box-sizing: border-box;
-    border-radius: 3px;
-
-    @include media_interval(0, $media_mobile) {
-      width: 17px;
-      height: 17px;
-      top: -10px;
-    }
-  }
-  
-  &::after{
-    position: absolute;
-    content: '';
-    top: 2px;
-    left: 5px;
-    width: 12px;
-    height: 7px;
-    border-left: 2px solid;
-    border-bottom: 2px solid;
-    transform: rotate(-55deg);
-    color: #C29974;
-    opacity: 0;
-    transition: opacity 0.3s;
-
-    @include media_interval(0, $media_mobile) {
-      top: -9px;
-      left: 4px;
-    }
+    background-color: $c_beige--dark;
+    cursor: pointer;
   }
 
-}
-
-.submit-button {
-  width: 106px;
-
-  @include media_interval(0, $media_mobile) {
-    width: 98px;
-    height: 38px;
-  }
-}
-
-.modal-window__placeholder::-webkit-input-placeholder {  
-  color: transparent;
-
-  @include media_interval($media_mobile, $media_tablet) {
-    font-size: 16px;
-    line-height: 19px;
-    color: #1E0606;
+  &:active {
+    background-color: $c_beige--dark;
+    opacity: .5;
   }
 
-  @include media_interval(0, $media_mobile) {
-    color: #1E0606;
-    font-size: 14px;
-    line-height: 16px;
+  &:disabled {
+    background-color: $c_grey;
+    color: $c_grey--light;
   }
-}
-
-
-
-
-
-
+} 
 
