--- a/src/components/avatar/index.html
+++ b/src/components/avatar/index.html
@@ -3,56 +3,59 @@
         <h1 class="h1-header">Antonina<br>Antoninovna</h1>
         <p class="avatar__data avatar__text">Future front-end developer<br>23 years old, Tolyatti</p>
     </section>
-    <picture>
-        <source srcset="/static/images/Antonina.jpg, /static/images/Antonina-2.jpg 2x" media="(min-width: 1024px)">
-        <source srcset="/static/images/Antonina-tablet.jpg" media="(min-width: 768px) and (max-width 1023px)">
-        <source srcset="/static/images/Antonina-picture-mobile.jpg" media="(max-width: 767px)">
-        <img class="avatar__picture" srcset="/static/images/Antonina.jpg" alt="avatar-picture">
-    </picture>
-    <section class="avatar__slider">        
-        <button class="backward-button avatar__vector">
-            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="40.75" y="40.75" width="39.5" height="39.5" rx="19.75" transform="rotate(-180 40.75 40.75)" stroke="#070707" stroke-width="2.5"/>
-                <rect x="24.5791" y="32.6992" width="16.5512" height="3" rx="1.5" transform="rotate(-135 24.5791 32.6992)" fill="#070707"/>
-                <rect x="26.7002" y="11.4199" width="16.5512" height="3" rx="1.5" transform="rotate(135 26.7002 11.4199)" fill="#070707"/>
-            </svg>
-        </button>
-        <ul class="avatar__pagination">            
-            <li class="avatar__pagination-item">
-                <button class="avatar__pagination-button">
-                    <svg width="10" height="10" viewBox="0 0 10 10" fill="#E5E5E5" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="5" cy="5.00006" r="5"/>
-                    </svg>
-                </button>
-            </li>            
-            <li class="avatar__pagination-item">
-                <button class="avatar__pagination-button">
-                    <svg width="10" height="10" viewBox="0 0 10 10" fill="#E5E5E5" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="5" cy="5.00006" r="5"/>
-                    </svg>
-                </button>
-            </li> 
-            <li class="avatar__pagination-item">
-                <button class="avatar__pagination-button">
-                    <svg width="10" height="10" viewBox="0 0 10 10" fill="#E5E5E5" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="5" cy="5.00006" r="5"/>
-                    </svg>
-                </button>
-            </li> 
-            <li class="avatar__pagination-item">
-                <button class="avatar__pagination-button">
-                    <svg width="10" height="10" viewBox="0 0 10 10" fill="#E5E5E5" xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="5" cy="5.00006" r="5"/>
-                    </svg>
-                </button>
-            </li> 
-        </ul>
-        <button class="forward-button avatar__vector">
-            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="1.25" y="1.25006" width="39.5" height="39.5" rx="19.75" stroke="#070707" stroke-width="2.5"/>
-                <rect x="17.4209" y="9.30084" width="16.5512" height="3" rx="1.5" transform="rotate(45 17.4209 9.30084)" fill="#070707"/>
-                <rect x="15.2998" y="30.5801" width="16.5512" height="3" rx="1.5" transform="rotate(-45 15.2998 30.5801)" fill="#070707"/>
-            </svg>
-        </button>
-    </section>
+    <div class="slider">
+        <div class="slider__wrapper">
+            <div class="slider__inner-wrapper">
+                <div class="slider__slide">
+                    <picture>
+                        <source srcset="/static/images/port.jpg, /static/images/port-2.jpg 2x" media="(min-width: 1024px)">
+                        <source srcset="/static/images/port-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
+                        <source srcset="/static/images/port-mobile.jpg" media="(max-width: 767px)">
+                        <img class="portfolio__picture" srcset="/static/images/port.jpg" alt="portfolio-picture">
+                    </picture>
+                </div>
+                <div class="slider__slide">
+                    <picture>
+                        <source srcset="/static/images/Antonina.jpg, /static/images/Antonina-2.jpg 2x" media="(min-width: 1024px)">
+                        <source srcset="/static/images/Antonina-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
+                        <source srcset="/static/images/Antonina-mobile.jpg" media="(max-width: 767px)">
+                        <img class="avatar__picture" srcset="/static/images/Antonina.jpg" alt="avatar-picture">
+                    </picture>
+                </div>
+                <div class="slider__slide">
+                    <picture>
+                        <source srcset="/static/images/port.jpg, /static/images/port-2.jpg 2x" media="(min-width: 1024px)">
+                        <source srcset="/static/images/port-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
+                        <source srcset="/static/images/port-mobile.jpg" media="(max-width: 767px)">
+                        <img class="portfolio__picture" srcset="/static/images/port.jpg" alt="portfolio-picture">
+                    </picture>
+                </div>
+                <div class="slider__slide">
+                    <picture>
+                        <source srcset="/static/images/Antonina.jpg, /static/images/Antonina-2.jpg 2x" media="(min-width: 1024px)">
+                        <source srcset="/static/images/Antonina-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
+                        <source srcset="/static/images/Antonina-mobile.jpg" media="(max-width: 767px)">
+                        <img class="avatar__picture" srcset="/static/images/Antonina.jpg" alt="avatar-picture">
+                    </picture>
+                </div>
+            </div>
+        </div>
+        <div class="slider__bottom-panel">        
+            <button class="slider__backward-button avatar__vector">
+                <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="40.75" y="40.75" width="39.5" height="39.5" rx="19.75" transform="rotate(-180 40.75 40.75)" stroke="#070707" stroke-width="2.5"/>
+                    <rect x="24.5791" y="32.6992" width="16.5512" height="3" rx="1.5" transform="rotate(-135 24.5791 32.6992)" fill="#070707"/>
+                    <rect x="26.7002" y="11.4199" width="16.5512" height="3" rx="1.5" transform="rotate(135 26.7002 11.4199)" fill="#070707"/>
+                </svg>
+            </button>
+            <div class="slider__pagination"></div>
+            <button class="slider__forward-button avatar__vector">
+                <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="1.25" y="1.25006" width="39.5" height="39.5" rx="19.75" stroke="#070707" stroke-width="2.5"/>
+                    <rect x="17.4209" y="9.30084" width="16.5512" height="3" rx="1.5" transform="rotate(45 17.4209 9.30084)" fill="#070707"/>
+                    <rect x="15.2998" y="30.5801" width="16.5512" height="3" rx="1.5" transform="rotate(-45 15.2998 30.5801)" fill="#070707"/>
+                </svg>
+            </button>
+        </div>
+    </div>
 </section>
