--- a/src/components/modal/send-message-modal.html
+++ b/src/components/modal/send-message-modal.html
@@ -4,21 +4,21 @@
             <div class="modal__cell-50">
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">What is your name? <span class="modal__name-red">*</span></p>
-                    <input type="password" class="modal__input modal__input-message_js" name="password">
+                    <input type="text" class="modal__input modal__input-message_js" name="name">
                 </label>
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">Message subject <span class="modal__name-red">*</span></p>
-                    <input type="password" class="modal__input" name="password">
+                    <input type="text" class="modal__input" name="message-subect">
                 </label>
             </div>
             <div class="modal__cell-50">
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">Your Email <span class="modal__name-red">*</span></p>
-                    <input type="password" class="modal__input" name="password">
+                    <input type="email" class="modal__input" name="email">
                 </label>
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">Your mobile phone * <span class="modal__name-red">*</span></p>
-                    <input type="password" class="modal__input" name="password">
+                    <input type="tel" class="modal__input" name="mobile-phone">
                 </label>                
             </div>
             <label class="modal__label">    
