--- a/src/components/button-scroll/_button-scroll.scss
+++ b/src/components/button-scroll/_button-scroll.scss
@@ -14,5 +14,10 @@
     &__image {        
         width: 50px;
         height: 50px;
+
+        &:hover,
+        &:focus {
+            cursor: pointer;
+        }
     }
 }
