--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -10,6 +10,7 @@
 @import "./modal/modal";
 @import "./mobile-menu/mobile-menu";
 @import "./button-scroll/button-scroll";
+@import "./profile-editing/profile-editing";
 
 body { 
   font-family: "Gilroy", Arial, sans-serif;
@@ -108,11 +109,16 @@ h2 {
 }
 
 .button {
+  padding: 10px 19px;
   font-family: "Gilroy", Arial, sans-serif;
-  background-color: transparent;
-  padding: 0;
-  border: none;   
-  transition:$tr_duration $tr_easing;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  background-color: $c_white;
+  color: $c_black--panter;
+  border-radius: 30px;
+  transition: $tr_duration $tr_easing;
 
   @include media_interval(0, $media_mobile) {
     font-size: 14px;
@@ -120,15 +126,11 @@ h2 {
     padding: 8px 22px;
   }
 
+  &:hover,
   &:focus {
-    outline-color: $c_beige--dark;
-    outline-style: solid;
-    outline-width: 2px;
-  }
-
-  &:hover {
-    background-color: $c_beige--dark;
+    background-color: $c_black--panter;
     cursor: pointer;
+    color: $c_white;
   }
 
   &:active {
