--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -5,8 +5,8 @@
         </div>
         <ul class="header__navigation-list">
             <li class="header__navigation-item"><a class="header__navigation-link" href="/pages/my-blog/">My blog</a></li>
-            <li class="header__navigation-item"><button class="header__navigation-button button button__sign-open_js" href="/pages/sign-in/">Sign in</button></li>                
-            <li class="header__navigation-item"><button class="header__navigation-button button button__register-open_js" href="/pages/register">Register</button></li>
+            <li class="header__navigation-item"><button class="header__navigation-button button__sign-open_js" href="/pages/sign-in/">Sign in</button></li>                
+            <li class="header__navigation-item"><button class="header__navigation-button button__register-open_js" href="/pages/register">Register</button></li>
             <li class="header__navigation-item"><a class="header__navigation-link" href="/pages/my-profile">My profile</a></li>
         </ul>
     </nav>
