--- a/src/components/profile/index.html
+++ b/src/components/profile/index.html
@@ -1,7 +1,7 @@
 <section class="profile container">
     <h1 class="h1-header">My profile</h1>
     <div class="profile__block">
-        <div class="profile__foto"></div>
+        <div class="profile__foto"><img class="nofoto" src="/static/images/no-foto.png"></div>
         <div class="profile__data">
             <ul class="profile__list">
                 <li class="profile__item"><span class="profile__text">Name:</span>Oksana</li>
@@ -11,8 +11,8 @@
                 <li class="profile__item"><span class="profile__text">Location:</span>Tolyatti</li>
                 <li class="profile__item"><span class="profile__text">Age:</span>23</li>
             </ul>
-            <button class="profile__data-button button">Change password</button>
-            <button class="profile__data-button button">Change other data</button>
+            <button class="profile__data-button button button__password-open_js">Change password</button>
+            <button class="profile__data-button button button__data-open_js">Change other data</button>
             <button class="profile__data-button button">Delete account</button>
         </div>
     </div>
