--- a/src/components/_colors.scss
+++ b/src/components/_colors.scss
@@ -41,9 +41,12 @@ $c_pink--light: #F3D0DB;
 $c_red: #EF5539;
 $c_red--pale: #FA684F;
 $c_red--fire: #FF0000;
+$c_red--pomegranate: #EB3617;
 
 $c_purple: #8F75BC;
 $c_purple--light: #8972B6;
 $c_purple--dark: #8066B0;
 
 $c_yellow: #FFC80C;
+
+$c_green--malachite: #03BC3C;
