--- a/src/components/modal/register-modal.html
+++ b/src/components/modal/register-modal.html
@@ -1,5 +1,5 @@
 <section class="modal register register_js">
-    <form action="/" class="modal__form modal__form-register">
+    <form name="modal-register" action="/" class="modal__form modal__form-register">
         <div class="modal-wrapper">
             <label class="modal__label">
                 <p class="modal__name">Email <span class="modal__name-red">*</span></p>
@@ -32,7 +32,7 @@
                 </label>
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">Age <span class="modal__name-red">*</span></p>
-                    <input type="text" class="modal__input" name="age">
+                    <input type="number" class="modal__input" name="age">
                 </label>
             </div>
             <label class="modal__consent">
