--- a/src/components/modal/send-message-modal.html
+++ b/src/components/modal/send-message-modal.html
@@ -1,5 +1,5 @@
 <section class="modal message message_js">
-    <form action="/" class="modal__form modal__form-message">
+    <form name="modal-message" action="/" class="modal__form modal__form-message">
         <div class="modal-wrapper">
             <div class="modal__cell-50">
                 <label class="modal__label modal__label-register">
@@ -8,7 +8,7 @@
                 </label>
                 <label class="modal__label modal__label-register">
                     <p class="modal__name">Message subject <span class="modal__name-red">*</span></p>
-                    <input type="text" class="modal__input" name="message-subect">
+                    <input type="text" class="modal__input" name="message-subject">
                 </label>
             </div>
             <div class="modal__cell-50">
@@ -17,7 +17,7 @@
                     <input type="email" class="modal__input" name="email">
                 </label>
                 <label class="modal__label modal__label-register">
-                    <p class="modal__name">Your mobile phone * <span class="modal__name-red">*</span></p>
+                    <p class="modal__name">Your mobile phone <span class="modal__name-red">*</span></p>
                     <input type="tel" class="modal__input" name="mobile-phone">
                 </label>                
             </div>
