--- a/src/components/modal/sign-in-modal.html
+++ b/src/components/modal/sign-in-modal.html
@@ -1,5 +1,5 @@
 <section class="modal sign sign_js">
-    <form action="/" class="modal__form modal__form-sign">
+    <form name="modal-sign" action="/" class="modal__form modal__form-sign">
         <div class="modal-wrapper">
             <label class="modal__label">
                 <p class="modal__name">Email <span class="modal__name-red">*</span></p>
