--- a/src/components/profile-editing/editing-data.html
+++ b/src/components/profile-editing/editing-data.html
@@ -1,5 +1,5 @@
 <section class="editing data data_js">
-    <form action="/" class="editing__form editing__form-data">
+    <form name="editing-data" action="/" class="editing__form editing__form-data">
         <div class="editing-wrapper">
             <label class="editing__label">
                 <p class="editing__name">Email</p>
@@ -22,7 +22,7 @@
                 </label>
                 <label class="editing__label editing__label-data">
                     <p class="editing__name">Age</p>
-                    <input type="text" class="editing__input" name="age">
+                    <input type="number" class="editing__input" name="age">
                 </label>                
             </div>
             <div class="editing__cell-50">
