--- a/src/components/profile-editing/editing-password.html
+++ b/src/components/profile-editing/editing-password.html
@@ -1,5 +1,5 @@
 <section class="editing password password_js">
-    <form action="/" class="editing__form editing__form-password">
+    <form name="editing-password" action="/" class="editing__form editing__form-password">
         <div class="editing-wrapper">
             <label class="editing__label">
                 <p class="editing__name">Old password <span class="editing__name-red">*</span></p>
